Fixed scroller & overflow bugs

--- a/src/sass/global.sass
+++ b/src/sass/global.sass
@@ -8,13 +8,14 @@
   -webkit-tap-highlight-color: transparent
 
 html
-  overflow: hidden
+  // overflow: hidden
+  height: 100%
 
 body
   font-family: 'MADETOMMY', sans-serif
   background-color: var(--background)
   color: var(--text)
-  min-height: 100vh
+  height: 100%
 
 button
   background-color: transparent
